--- a/vignettes/sensemakr.bib
+++ b/vignettes/sensemakr.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Carlos Cinelli at 2020-01-02 15:28:48 -0800 
+%% Created for Carlos Cinelli at 2020-02-28 16:20:30 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cinelli:wp2020,
+	Author = {Cinelli, Carlos and Hazlett, Chad},
+	Date-Added = {2020-02-28 16:16:40 -0800},
+	Date-Modified = {2020-02-28 16:17:28 -0800},
+	Journal = {Working Paper},
+	Title = {An omitted variable bias framework for sensitivity analysis of instrumental variables},
+	Year = {2020}}
 
 @article{franks:jasa2019,
 	Author = {Franks, Alex and D'Amour, Alex and Feller, Avi},
@@ -1996,11 +2004,14 @@
 	Abstract = {Summary We extend the omitted variable bias framework with a suite of tools for sensitivity analysis in regression models that does not require assumptions on the functional form of the treatment assignment mechanism nor on the distribution of the unobserved confounders, naturally handles multiple confounders, possibly acting non-linearly, exploits expert knowledge to bound sensitivity parameters and can be easily computed by using only standard regression results. In particular, we introduce two novel sensitivity measures suited for routine reporting. The robustness value describes the minimum strength of association that unobserved confounding would need to have, both with the treatment and with the outcome, to change the research conclusions. The partial R2 of the treatment with the outcome shows how strongly confounders explaining all the residual outcome variation would have to be associated with the treatment to eliminate the estimated effect. Next, we offer graphical tools for elaborating on problematic confounders, examining the sensitivity of point estimates and t-values, as well as `extreme scenarios'. Finally, we describe problems with a common `benchmarking' practice and introduce a novel procedure to bound the strength of confounders formally on the basis of a comparison with observed covariates. We apply these methods to a running example that estimates the effect of exposure to violence on attitudes toward peace.},
 	Author = {Cinelli, Carlos and Hazlett, Chad},
 	Date-Added = {2019-12-26 12:32:56 -0800},
-	Date-Modified = {2019-12-26 13:20:00 -0800},
+	Date-Modified = {2020-02-28 16:16:32 -0800},
 	Doi = {10.1111/rssb.12348},
 	Journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
 	Keywords = {Causal inference, Confounding, Omitted variable bias, Regression, Robustness value, Sensitivity analysis},
+	Number = {1},
+	Pages = {39-67},
 	Title = {Making Sense of Sensitivity: Extending Omitted Variable Bias},
-	Year = {2019},
+	Volume = {82},
+	Year = {2020},
 	Bdsk-Url-1 = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/rssb.12348},
 	Bdsk-Url-2 = {https://doi.org/10.1111/rssb.12348}}
